# recovery-tracker

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md
backend/: .env.example  main.py  pyproject.toml
backend/app/: config.py  database.py  deps.py  ledger_parser.py  main.py  models.py  schemas.py  security.py  seed.py  services.py  whatsapp.py
backend/app/routers/: auth.py  contacts.py  customers.py  dashboard.py  reminders.py  whatsapp.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: Layout.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  format.ts  types.ts
frontend/src/pages/: CustomerDetail.tsx  Customers.tsx  Dashboard.tsx  DeletedCustomers.tsx  ImportCustomers.tsx  Login.tsx  Today.tsx  WhatsAppSetup.tsx
