[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recovery-tracker-backend"
version = "0.1.0"
description = "Backend API for the customer recovery reminder tracker"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9.9",
    "email-validator>=2.1.0",
    "neonize>=0.3.18",
    "qrcode[pil]>=7.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008 fires on FastAPI's `Depends(...)` default-argument pattern, which is the
# framework's intended usage.
ignore = ["B008"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
